PES1UG22CS400_407_412_415-Load-Balanced-URL-Shortener-using-Docker-Kubernetes-main/url-shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shortener
  template:
    metadata:
      labels:
        app: shortener
    spec:
      containers:
      - name: shortener
        image: pes2ug22cs131/url-shortener:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "250m"
