PES1UG22CS400_407_412_415-Load-Balanced-URL-Shortener-using-Docker-Kubernetes-main/url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  type: LoadBalancer
  selector:
    app: shortener
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
