PES1UG22CS400_407_412_415-Load-Balanced-URL-Shortener-using-Docker-Kubernetes-main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: urlshortener.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-shortener-service
            port:
              number: 5000
